--- a/style-nav.css
+++ b/style-nav.css
@@ -1,6 +1,7 @@
 nav {
     position: absolute;
     width: 100vw;
+    height: 7.5vh;
     z-index: 100;
     display: flex;
     flex-direction: row;
@@ -10,8 +11,8 @@ nav {
     align-items: center;
     left: 0;
     overflow: hidden;
-    padding-top: 1.5vmax;
-    padding-bottom: 1.5vmax;
+    padding-top: 0.75vmax;
+    padding-bottom: 0.75vmax;
 }
 
 .nav-links {
@@ -22,11 +23,15 @@ nav {
     padding: 0;
     overflow: hidden;
     width: 25%;
-    margin-right: 3vw;
+    margin-right: 2vmax;
 }
 
-.nav-links li {
+.nav-links li a{
     width: 1.5rem;
+}
+
+#contact-button-wrapper div a{
+    width: 100%;
 }
 
 .nav-links li a img {
@@ -35,9 +40,80 @@ nav {
 
 .nav-logo {
     width: 3rem;
-    margin-left: 3vw;
+    margin-left: 2vmax;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-logo img {
     width: 100%;            
+}
+
+/* ----------------------------------- */
+
+@media screen and (max-width: 1024px) {
+    .nav-links {
+        width: 50%;
+    }
+
+    .nav-links li a{
+        display: none;
+    }
+
+    .contact-button-wrapper {
+        width: 100%;
+    }
+
+    .main-button a {
+        display: flex !important;
+    }
+
+    /* .hamburger {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 2rem;
+        height: 1.5rem;
+        overflow: hidden;
+        margin-right: 2vmax;
+    }
+
+    .hamburger span {
+        display: block;
+        width: 100%;
+        border-top: 0.2rem solid var(--color-background-primary);
+    }
+
+    .hamburger-check {
+        position: absolute;
+        width: 2rem;
+        height: 1.5rem;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+    }
+
+    .nav-links {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+        justify-content: start;
+        background-color: var(--color-primary);
+        
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+    }
+
+    nav input:checked ~ ul
+    {
+        transform: none;
+    }
+
+    .nav-links li {
+        padding-top: 2rem;
+    }
+*/
 }
