--- a/style-index.css
+++ b/style-index.css
@@ -1,9 +1,10 @@
 #section-top-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 4vw;
+    align-items: center; 
+    justify-content: center;  
     overflow: visible;
+    margin-top: 7.5vh;
 }
 
 #section-top {
@@ -26,7 +27,7 @@
 }
 
 #section-top-img {
-    width: 45vmax;
+    width: 45vw;
     margin-left: 2rem;
     height: 100%;
     display: flex;
@@ -39,11 +40,14 @@
 }
 
 #section-top-button {
+    background-color: var(--color-primary);
+    display: inline-block;
+    width: auto;
     margin-top: 2rem;
-    padding-right: 2rem;
-    padding-left: 2rem;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+}
+
+#section-top-button h4 {
+    margin: 0;
 }
 
 /* ------------------------------------- */
@@ -66,7 +70,7 @@
 }
 
 #section-desc-content {
-    width: 25vmax;
+    width: 18vmax;
 }
 
 #section-desc-content h2 {
@@ -86,7 +90,7 @@
 #section-ml {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding-top: 2vmax;
 }
@@ -102,6 +106,7 @@
 
 #section-ml-img {
     width: 25vmax;
+    margin-right: 4rem;
 }
 
 #section-ml-img img {
@@ -118,7 +123,6 @@
 #section-test {
     display: flex;
     flex-direction: column;
-    
 }
 
 #section-test-content {
@@ -135,18 +139,18 @@
 #test-links {
     display: flex;
     align-items: flex-end;
-    justify-content: space-between;
+    width: auto;
+    justify-content: start;
     list-style-type: none;
     padding: 0;
     overflow: hidden;
-    width: 6vmax;
-    margin-right: 3vw;
     margin-top: 1rem;
 }
 
 #test-links li a {
     display: flex;
     width: 1.25rem;
+    margin-right: 2rem;
 }
 
 #test-links li a img {
