--- a/style-download.css
+++ b/style-download.css
@@ -1,7 +1,3 @@
-#section-download-wrapper {
-    overflow: hidden;
-}
-
 #section-download {
     display: flex;
     flex-direction: column;
@@ -48,5 +44,13 @@
 
 .download-links {
     margin: 0 !important;
+}
+
+#section-test-wrapper {
+    width: 100%;
+}
+
+#section-test {
+    width: 100%;
 }
 
