--- a/style-index.css
+++ b/style-index.css
@@ -27,6 +27,8 @@
 }
 
 #section-top-img {
+    position: relative;
+    display: inline-block;
     width: 45vw;
     margin-left: 2rem;
     height: 100%;
@@ -48,6 +50,25 @@
 
 #section-top-button h4 {
     margin: 0;
+}
+
+.section-top-img-decoration {
+    position: absolute;
+    display: inline-block;
+    animation: float-animation 4s infinite;
+    overflow: hidden;
+}
+
+@keyframes float-animation {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-1rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 /* ------------------------------------- */
