Added registration form

--- a/style-download.css
+++ b/style-download.css
@@ -15,7 +15,7 @@
 
 #section-download-sub {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 2rem;
@@ -23,8 +23,17 @@
 
 #section-download-sub form {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#section-download-sub form > * {
+    margin-top: 1rem;
+}
+
+#section-download-button {
+    color: white;
 }
 
 #section-download-outro {
