--- a/style-index.css
+++ b/style-index.css
@@ -171,7 +171,8 @@
 #test-links li a {
     display: flex;
     width: 1.25rem;
-    margin-right: 2rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 #test-links li a img {
