--- a/style-nav.css
+++ b/style-nav.css
@@ -15,6 +15,14 @@ nav {
     padding-bottom: 0.75vmax;
 }
 
+.nav-content-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
+}
+
 #nav-links {
     display: flex;
     align-items: center;
@@ -22,7 +30,7 @@ nav {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
-    width: 30%;
+    width: 25%;
     margin-right: 2vmax;
 }
 
@@ -51,8 +59,8 @@ nav {
 }
 
 #languageSwitcher {
-    width: 100%;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     background-color: var(--color-primary);
     color: var(--color-background-primary);
     border: none;
