--- a/style-main.css
+++ b/style-main.css
@@ -2,9 +2,10 @@
     scroll-behavior: smooth;
 
     font-family: 'Poppins';
-    overflow-x: hidden;
-    user-select: none;
+    /* overflow-x: hidden; */
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
     /*primary colors*/
     --color-primary: #0088EB;
@@ -17,25 +18,16 @@
 
     /*background colors*/
     --color-background-primary: #F5F5F5;
-    --color-background-secondary: #EEEEEE;
+    --color-background-secondary: #0088EB;
 }
 
-a {text-decoration: none}
-
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
+    line-height: 1.6;
     animation: fadeInAnimation ease 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 
     background-color: var(--color-background-primary);
-
-    /* -ms-overflow-style: none;
-    scrollbar-width: none;  */
 }
 
 @keyframes fadeInAnimation {
@@ -46,224 +38,16 @@ body {
         opacity: 1;
      }
 }
-/* ------------------------------------- */
 
-h1 {
-    font-size: 4.5vmax;
-    line-height: 4.5vmax;
-    overflow: hidden;
-}
-
-h2 {
-    font-size: 2.1vmax; 
-    line-height: 3vmax;  
-}
-
-h3 {
-    font-weight: 400;
-    font-size: 1.1vmax;
-}
-
-h4 {
-    font-size: 0.9vmax;
-}
-
-h5 {
-    font-size: 0.8vmax;
-}
-
-@media screen and (max-width: 1024px) {
-    h1 {
-        font-size: 6vh;
-        line-height: 6vh;
-    }
-
-    h3 {
-        font-size: 2vh;
-    }
-
-    h4 {
-        font-size: 2.25vh;
-    }
-
-    h5 {
-        font-size: 1vh;
-    }
-}
-
-/* ------------------------------------- */
-
-::-webkit-scrollbar {
-    width: 0.5vw;
-}
-
-::-webkit-scrollbar-track {
-    background-color: var(--color-background-primary);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: var(--color-primary);
-}
-
-/* ------------------------------------- */
-
-.main-button {
-    padding-right: 1.25vmax;
-    padding-left: 1.25vmax;
-    padding-top: 0.75vmax;
-    padding-bottom: 0.75vmax;
-    border-radius: 0.5vmax;
-    border: none;
+.dark-button {
     background-color: var(--color-text);
-}
-
-.main-button a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--color-text-secondary)
-}
-
-.button-img {
-    width: 1.5vmax;
-    margin-right: 1vmax; 
-}
-
-.button-img img {
-    width: 100%;
-}
-
-.main-button a h4 {
-    font-weight: 500;
-}
-
-.main-button:hover {
-    cursor: pointer;
-    background-image: linear-gradient(rgb(0 0 0/20%) 0 0);
-}
-
-@media screen and (max-width: 1024px) {
-    .main-button {
-        padding-right: 2vmax;
-        padding-left: 2vmax;
-        padding-top: 1.5vmax;
-        padding-bottom: 1.5vmax;
-    }
-
-    .button-img {
-        width: 2.5vmax;
-    }
-}
-
-/* ------------------------------------- */
-
-section {
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.section-wrapper {
-    margin-left: 4vw;
-    margin-right: 4vw;
-    margin-top: 4vh;
-    margin-bottom: 4vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.section-light {
-    background-color: var(--color-background-primary);
-}
-
-.section-dark {
-    background-color: var(--color-primary)
-}
-
-/* ------------------------------------- */
-
-.divider {
-    display: block;
-    width: 100%;
-    border-top: 2px solid var(--color-background-primary);
-}
-
-/* ------------------------------------- */
-
-.footer {
-    width: 100%;
-    height: 100%;
-}
-
-.footer h2 {
-    margin-top: 2rem;
-}
-
-.footer h4{
-    font-weight: 400;
-}
-
-/* ------------------------------------- */
-
-input[type=text] {
-    width: 20vmax;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
-    box-sizing: border-box;
+    color: var(--color-text-secondary);
+    padding: 1rem 1rem;
+    font-weight: 600;
+    font-size: 0.95rem;
+    line-height: 1.2;
+    text-decoration: none;
     border: none;
-}
-
-input[type=email] {
-    width: 20vmax;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
-    box-sizing: border-box;
-    border: none;
-}
-
-select {
-    width: 20vmax;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
-    box-sizing: border-box;
-    border: none;
-}
-
-input, input::placeholder {
-    font-size: 0.9vmax; 
-}
-
-@media screen and (max-width: 1024px) {
-    input[type=text] {
-        width: 50vw;
-        padding: 2vh;
-        border-radius: 0.25rem;
-        margin-right: 0.5rem;
-    }
-
-    input[type=email] {
-        width: 50vw;
-        padding: 2vh;
-        border-radius: 0.25rem;
-        margin-right: 0.5rem;
-    }
-
-    select {
-        width: 50vw;
-        padding: 2vh;
-        border-radius: 0.25rem;
-        margin-right: 0.5rem;
-    }
-
-    input, input::placeholder {
-        font-size: 1.5vh;
-    }
-    
+    border-radius: 8px;
+    display: inline-block;
 }
