--- a/style-index.css
+++ b/style-index.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* min-height: calc(100vh - 50px); */
 }
 
 .hero-content {
@@ -23,6 +24,9 @@
 
 .hero-text {
     flex: 1 1 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero-text h1 {
@@ -51,6 +55,11 @@
     animation-delay: 0.1s;
 }
 
+.black-logo {
+    width: 300px; 
+    transform: translateY(25px);
+}
+
 @keyframes fadeInUp {
     0% {
         opacity: 0;
@@ -72,6 +81,10 @@
     display: inline-block;
     animation: float-animation 4s infinite;
     overflow: hidden;
+}
+
+.hero-decoration:nth-child(2) {
+    animation-delay: 1.2s;
 }
 
 @keyframes float-animation {
@@ -251,14 +264,19 @@
 }
 
 @media (max-width: 768px) {
-  .hero h1,
-  .features h2,
-  .creator h2,
-  .beta h2 {
-    font-size: 1.5rem;
-  }
+    .hero h1,
+    .features h2,
+    .creator h2,
+    .beta h2 {
+        font-size: 1.5rem;
+    }
 
-  .feature-box {
-    padding: 0 1rem;
-  }
+    .feature-box {
+        padding: 0 1rem;
+    }
+
+    .black-logo {
+        width: 160px; 
+        transform: translateY(13px);
+    }
 }
