--- a/style-index.css
+++ b/style-index.css
@@ -123,10 +123,10 @@
 
 .features-content {
     max-width: 1200px;
+    min-height: 500px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    min-height: 500px;
     position: relative;
 }
 
@@ -383,6 +383,7 @@
     .features-image {
         margin-right: 0 !important;
         margin-left: 0 !important;
+        min-height: auto;
     }
 
     .twitch-browser {
