--- a/style-index.css
+++ b/style-index.css
@@ -351,6 +351,37 @@
     font-size: 1rem;
 }
 
+.device-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.device-image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.device-video {
+  position: absolute;
+  bottom: 5%;
+  left: 2.7%;
+  width: 44%;
+  height: 39%;
+  object-fit: cover;
+  border-radius: 8px;
+  z-index: 2;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.device-video-live {
+    position: absolute;
+    bottom: 31%;
+    left: 34.7%;
+    width: 10%;
+    z-index: 3;
+}
+
 @media (max-width: 768px) {
     .only-mobile {
         display: flex !important;
