--- a/style-index.css
+++ b/style-index.css
@@ -27,6 +27,7 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
     width: 100%;
+    z-index: 3;
 }
 
 .hero-text {
@@ -248,7 +249,7 @@
 
 .features-image.customize {
     height: 65vh;
-    margin-left: calc(-100vw + 100%);
+    margin-left: calc(-100vw - 100%);
     justify-content: flex-end;
     opacity: 0;
     transform: translateX(-200px);
