Added social links and fixed footer

--- a/style-index.css
+++ b/style-index.css
@@ -718,4 +718,8 @@ section * {
     .pricing-grid {
         grid-template-columns: repeat(2, minmax(0,1fr));
     }
+
+    .footer-section > .logo {
+        font-size: 1.5rem;
+    }
 }
