--- a/style-nav.css
+++ b/style-nav.css
@@ -99,18 +99,23 @@ header * {
 .nav-dropdown,
 .lang-dropdown {
     position: relative;
+    display: flex;
 }
 
 .nav-toggle,
 .lang-toggle {
     background: none;
     border: none;
-    color: var(--color-text-secondary);
+    color: black;
     cursor: pointer;
     font-size: 1rem;
     font-weight: 500;
     display: flex;
     align-items: center;
+}
+
+.lang-preview {
+    margin-right: 10px;
 }
 
 .nav-menu,
